layout rows and columns

--- a/index.html
+++ b/index.html
@@ -33,27 +33,15 @@
             </div>
         </div>
     </header>
-    <main>
-      <div class="container row">
-        <div class="col bg-primary">
+    <main class="bg-primary">
+      
+      <div class="container row pt-5">
+        <div class="col-6 ">
           <h1 class="text-light">Primary</h1>
         </div>
 
-        <div class="col bg-secondary">
+        <div class="col-6">
           <h2 class="text-light">Secondary</h2>
-        </div>
-        <div class="col bg-warning">
-          <h3 class="text-dark">Warning</h3>
-        </div>
-        <div class="col bg-dark">
-          <h4 class="text-light">Dark</h4>
-        </div>
-        <div class="col bg-info">
-          <h5 class="text-dark">Info</h5>
-        </div>
-
-        <div class="col bg-light">
-          <p class="text-dark">Light</p>
         </div>
       </div>
     </main>
