--- a/index.html
+++ b/index.html
@@ -4,47 +4,111 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Bad+Script&family=Julius+Sans+One&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Bad+Script&family=Julius+Sans+One&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="/css/theme.css" />
   </head>
   <body>
-    <header class="bg-secondary">
-        <div class="row d-flex justify-content-between">
-            <div class="col-8 m-2 p-0">
-                <nav class="navbar navbar-light">
-                    <a class="navbar-brand text-light" href="index.html">
-                    <img
-                        src="./images/mdi_foot-print.png"
-                        class="d-inline-block align-center"
-                        alt="Footprint logo linking to home page"
-                    />
-                    <h1 class="d-inline-block h2">Hikes Inspire</h1>
-                    </a>
-                </nav>
-            </div>
-            <div class="col-2 my-2 p-0 d-flex align-items-center">
-                    <img
-                    src="./images/profile-image-thumbnail.png"
-                    alt="Profile image linking to profile page"
-                />
-                </a>
-            </div>
+    <header class="bg-secondary container-fluid">
+      <div class="row d-flex justify-content-between me-4">
+        <div class="col-8 m-2 p-0">
+          <nav class="navbar navbar-light">
+            <a class="navbar-brand text-light" href="index.html">
+              <img
+                src="./images/mdi_foot-print.png"
+                class="d-inline-block align-center"
+                alt="Footprint logo linking to home page"
+              />
+              <h1 class="d-inline-block h2">Hikes Inspire</h1>
+            </a>
+          </nav>
         </div>
+      </div>
     </header>
-    <main class="bg-primary">
-      
-      <div class="container row pt-5">
-        <div class="col-6 ">
-          <h1 class="text-light">Primary</h1>
+    <main
+      class="bg-primary pb-5 pt-5 d-flex justify-content-center align-items-center"
+    >
+      <div
+        class="container row pt-5 d-flex justify-content-center align-items-start"
+      >
+        <div class="col-sm-7 col-md-6 d-flex justify-content-center">
+          <figure class="figure text-dark bg-light border pb-4 pb-sm-5 pt-sm-2">
+            <img
+              src="./images/collage-hiking-images-with-border.png"
+              class="figure-img img-fluid rounded"
+              alt="A generic square placeholder image with rounded corners in a figure."
+            />
+            <figcaption class="text-center pt-sm-1 m-1 mx-lg-3">
+              Search inspiration and post your favourite hikes!
+            </figcaption>
+          </figure>
         </div>
 
-        <div class="col-6">
-          <h2 class="text-light">Secondary</h2>
+        <div
+          class="container bg-light col-11 col-sm-5 col-md-4 col-lg-4 m-3 m-sm-0 pt-5 pb-md-5 text-center d-flex justify-content-center"
+        >
+          <form class="pb-lg-5 pt-lg-5">
+            <div
+              class="form-group row my-3 d-flex justify-content-center align-center"
+            >
+              <label for="inputEmail3" class="col-form-label"></label>
+              <div class="col-10 col-sm-11">
+                <input
+                  type="email"
+                  pattern=".+@example\.com , .+@example\.no , .+@example\.net, .+@example\.org "
+                  required
+                  class="form-control"
+                  data-toggle="tooltip"
+                  data-placement="top"
+                  title="A valid e-mail adress must contain @."
+                  id="inputEmail3"
+                  placeholder="Email"
+                />
+              </div>
+            </div>
+            <div class="form-group row my-3 d-flex justify-content-center">
+              <label for="Password" class="col-form-label"></label>
+              <div class="col-10 col-sm-11">
+                <input
+                  type="password"
+                  minlength="8"
+                  required
+                  class="form-control"
+                  data-toggle="tooltip"
+                  data-placement="top"
+                  title=" Your password must be at least 8 characters long."
+                  id="Password"
+                  placeholder="Password"
+                />
+              </div>
+            </div>
+            <div class="form-group row">
+              <div class="p-5">
+                <a href="./html/feed.html"
+                  ><button
+                    type="submit"
+                    class="btn btn-warning col-10 col-sm-11"
+                  >
+                    Log in
+                  </button></a
+                >
+                <p class="my-3">Or</p>
+                <button
+                  type="submit"
+                  class="btn btn-transparent border-warning text-warning col-10 col-sm-12"
+                >
+                  Register
+                </button>
+              </div>
+            </div>
+          </form>
         </div>
       </div>
     </main>
-    <footer></footer>
+    <footer class="bg-secondary pt-5 pb-5"></footer>
   </body>
 </html>
