Layout profile and feed page.
 Card adjustments.
Added images.

--- a/html/profile.html
+++ b/html/profile.html
@@ -4,39 +4,119 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Bad+Script&family=Julius+Sans+One&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Bad+Script&family=Julius+Sans+One&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="../css/theme.css" />
   </head>
   <body>
     <header class="bg-secondary container-fluid">
-        <div class="row d-flex justify-content-between me-3">
-            <div class="col-8 m-2 p-0">
-                <nav class="navbar navbar-light">
-                    <a class="navbar-brand text-light" href="../index.html">
-                    <img
-                        src="../images/mdi_foot-print.png"
-                        class="d-inline-block align-center"
-                        alt="Footprint logo linking to home page"
-                    />
-                    <h1 class="primary-font d-inline-block h2">Hikes Inspire</h1>
-                    </a>
-                </nav>
-            </div>
-            <div class="col-2 my-2 p-0 d-flex align-items-center">
-                    <img
-                    src="../images/profile-image-thumbnail.png"
-                    alt="Profile image linking to profile page"
-                />
-                </a>
-            </div>
+      <div class="row d-flex justify-content-between me-3">
+        <div class="col-8 m-2 p-0">
+          <nav class="navbar navbar-light">
+            <a class="navbar-brand text-light" href="../index.html">
+              <img
+                src="../images/mdi_foot-print.png"
+                class="d-inline-block align-center"
+                alt="Footprint logo linking to home page"
+              />
+              <h1 class="primary-font d-inline-block h2">Hikes Inspire</h1>
+            </a>
+          </nav>
         </div>
+      </div>
     </header>
-    <main>
-        
-    </main>
-    <footer class="bg-secondary pt-5 pb-5">
+    <main class="container">
+      <section class="bg-warning text-center pb-3">
+        <div class="d-flex justify-content-center align-items-center row">
+          <h1 class="col primary-font text-light h2">My profile</h1>
+          <img
+            class="col img-thumbnail p-1 rounded-circle rounded-5 rounded-top-0 border-primary me-2"
+            src="../images/_d3c92eef-37d0-46ba-ae2f-44e6845a2601.jpg"
+          />
+        </div>
+        <div class="d-flex justify-content-start">
+          <h1 class="h6">Followers goes here</h1>
+        </div>
+      </section>
+      <section class="container my-5">
+        <div class="row">
+          <a href="#" class="d-flex justify-content-center"
+            ><div class="col-8 card text-bg-info mb-3">
+              <h2 class="primary-font h6 text-center mt-3 mx-1">
+                Lofoten Hiking experience
+              </h2>
+              <div class="card-body">
+                <img
+                  src="../images/john-o-nolan-6f_ANCcbj3o-unsplash.jpg"
+                  class="img-thumbnail"
+                />
+              </div>
+            </div>
+          </a>
+          <a href="#" class="d-flex justify-content-center"
+            ><div class="col-8 card text-bg-info mb-3">
+              <h2 class="primary-font h6 text-center mt-3 mx-1">Trollheimen</h2>
+              <div class="card-body">
+                <img
+                  src="../images/benjamin-davies-CiYenwxBB3U-unsplash.jpg"
+                  class="img-thumbnail"
+                />
+              </div>
+            </div>
+          </a>
+          <a href="#" class="d-flex justify-content-center"
+            ><div class="col-8 card text-bg-info mb-3">
+              <h2 class="primary-font h6 text-center mt-3 mx-1">
+                The Majestetic North
+              </h2>
+              <div class="card-body">
+                <img
+                  src="../images/sami-matias-B8mHassV6Q0-unsplash.jpg"
+                  class="img-thumbnail"
+                />
+              </div>
+            </div>
+          </a>
+          <a href="#" class="d-flex justify-content-center"
+            ><div class="col-8 card text-bg-info mb-3">
+              <h2 class="primary-font h6 text-center mt-3 mx-1">
+                Lofoten Hiking experience
+              </h2>
+              <div class="card-body">
+                <img
+                  src="../images/tobias-tullius-eJeEz6Paz-o-unsplash.jpg"
+                  class="img-thumbnail"
+                />
+              </div>
+            </div>
+          </a>
+        </div>
+      </section>
 
-    </footer>
-    </body>
+      <section>
+        <ul class="row d-flex justify-content-center">
+          <li class="col-8">
+            <a href="#">
+              <div class="card text-bg-info mb-3">
+                <h2 class="primary-font h5 text-center mt-3">
+                  Lofoten Hiking experience
+                </h2>
+                <div class="card-body">
+                  <img
+                    src="../images/vidar-nordli-mathisen-2cNh00feVzw-unsplash.jpg"
+                    class="img-thumbnail"
+                  />
+                </div>
+              </div>
+            </a>
+          </li>
+        </ul>
+      </section>
+    </main>
+    <footer class="bg-secondary pt-5 pb-5"></footer>
+  </body>
+</html>
