Layout adjust. profile and feed
Made cardlist. Column adjustments.

Added profile image, icons, buttons.

--- a/html/feed.html
+++ b/html/feed.html
@@ -15,10 +15,14 @@
       href="https://fonts.googleapis.com/css2?family=Bad+Script&family=Julius+Sans+One&display=swap"
       rel="stylesheet"
     />
+    <script
+      src="https://kit.fontawesome.com/81a562339c.js"
+      crossorigin="anonymous"
+    ></script>
     <link rel="stylesheet" href="../css/theme.css" />
   </head>
   <body>
-    <header class="bg-secondary container-fluid">
+    <header class="bg-secondary container-fluid" id="header-feed-page">
       <div class="row d-flex justify-content-between me-3">
         <div class="col-8 m-2 p-0">
           <nav class="navbar navbar-light">
@@ -35,8 +39,8 @@
         <div class="col-2 my-2 p-0 d-flex align-items-center">
           <a href="./profile.html"
             ><img
-              class="img-thumbnail p-1 rounded-circle rounded-5 rounded-bottom-0 border-primary"
-              src="../images/_d3c92eef-37d0-46ba-ae2f-44e6845a2601.jpg"
+              class="img-thumbnail p-1 rounded-circle rounded-5 rounded-top-0 border-primary border-0 me-2"
+              src="../images/Profile-image-hikes-inspire.jpg"
               alt="Profile image linking to profile page"
             />
           </a>
@@ -152,11 +156,9 @@
                     <div class="col-2">
                       <a href="#"
                         ><span class="badge bg-warning rounded-pill px-2 py-1"
-                          >Follow</span
-                        ></a
-                      >
-                    </div></small
-                  >
+                          >Follow <i class="fa-solid fa-plus"></i></span
+                      ></a></div
+                  ></small>
                 </div>
               </div>
             </div>
@@ -200,11 +202,9 @@
                     <div class="col-2">
                       <a href="#"
                         ><span class="badge bg-warning rounded-pill px-2 py-1"
-                          >Follow</span
-                        ></a
-                      >
-                    </div></small
-                  >
+                          >Follow <i class="fa-solid fa-plus"></i></span
+                      ></a></div
+                  ></small>
                 </div>
               </div>
             </div>
@@ -248,11 +248,9 @@
                     <div class="col-2">
                       <a href="#"
                         ><span class="badge bg-warning rounded-pill px-2 py-1"
-                          >Follow</span
-                        ></a
-                      >
-                    </div></small
-                  >
+                          >Follow <i class="fa-solid fa-plus"></i></span
+                      ></a></div
+                  ></small>
                 </div>
               </div>
             </div>
@@ -302,11 +300,9 @@
                     <div class="col-2">
                       <a href="#"
                         ><span class="badge bg-warning rounded-pill px-2 py-1"
-                          >Follow</span
-                        ></a
-                      >
-                    </div></small
-                  >
+                          >Follow <i class="fa-solid fa-plus"></i></span
+                      ></a></div
+                  ></small>
                 </div>
               </div>
             </div>
@@ -352,11 +348,9 @@
                     <div class="col-2">
                       <a href="#"
                         ><span class="badge bg-warning rounded-pill px-2 py-1"
-                          >Follow</span
-                        ></a
-                      >
-                    </div></small
-                  >
+                          >Follow <i class="fa-solid fa-plus"></i></span
+                      ></a></div
+                  ></small>
                 </div>
               </div>
             </div>
@@ -381,6 +375,14 @@
             </div>
           </div>
         </div>
+      </div>
+      <div class="d-flex justify-content-center mb-5">
+        <a
+          href="#header-feed-page"
+          class="btn btn-primary border-secondary"
+          id="btn-to-top"
+          >To top <i class="fa-solid fa-angle-up"></i
+        ></a>
       </div>
     </main>
     <footer class="bg-secondary pt-5 pb-5"></footer>
