--- a/index.html
+++ b/index.html
@@ -4,12 +4,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Log in and registration page</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+
     <link
       href="https://fonts.googleapis.com/css2?family=Bad+Script&family=Julius+Sans+One&display=swap"
       rel="stylesheet"
     />
+    <script
+      src="https://kit.fontawesome.com/81a562339c.js"
+      crossorigin="anonymous"
+    ></script>
     <link rel="stylesheet" href="/css/theme.css" />
   </head>
   <body>
@@ -33,7 +36,7 @@
       <div
         class="container row pt-5 d-flex justify-content-center align-items-start"
       >
-        <div class="col-sm-7 col-md-6 d-flex justify-content-center">
+        <div class="col-md-6 d-flex justify-content-center">
           <figure class="figure text-dark bg-light border pb-4 pb-sm-5 pt-sm-2">
             <img
               src="./images/collage-hiking-images-with-border.png"
@@ -41,7 +44,7 @@
               alt="A generic square placeholder image with rounded corners in a figure."
             />
             <figcaption
-              class="secondary-font image-text h4 text-center pt-sm-1 m-1 mx-lg-3"
+              class="secondary-font image-text h4 text-center pt-sm-1 m-1 mx-lg-3 lh-base"
             >
               Search inspiration and post your favourite hikes!
             </figcaption>
@@ -91,13 +94,6 @@
                   type="submit"
                   value="Log In"
                   class="btn btn-warning col-10 col-sm-11"
-                />
-
-                <p class="my-3">Or</p>
-                <input
-                  type="submit"
-                  value="Register"
-                  class="btn btn-transparent border-warning text-warning col-10 col-sm-12"
                 />
               </div>
             </div>
