--- a/html/feed.html
+++ b/html/feed.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Inspiration feed</title>
+    <title>Feed | Hikes Inspire</title>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <link
       rel="stylesheet"
@@ -11,6 +11,12 @@
     />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Dosis:wght@200..800&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
+      rel="stylesheet"
+    />
     <link
       href="https://fonts.googleapis.com/css2?family=Bad+Script&family=Julius+Sans+One&display=swap"
       rel="stylesheet"
@@ -23,30 +29,59 @@
   </head>
   <body>
     <header class="bg-secondary container-fluid" id="header-feed-page">
-      <div class="row d-flex justify-content-between me-3">
-        <div class="col-8 m-2 p-0">
-          <nav class="navbar navbar-light">
-            <a class="navbar-brand text-light" href="../index.html">
-              <img
-                src="../images/mdi_foot-print.png"
-                class="d-inline-block align-center"
-                alt="Footprint logo linking to home page"
-              />
-              <h1 class="primary-font d-inline-block h2">Hikes Inspire</h1>
-            </a>
-          </nav>
-        </div>
-        <div class="col-2 my-2 p-0 d-flex align-items-center">
-          <a href="./profile.html"
-            ><img
-              class="img-thumbnail p-1 rounded-circle rounded-5 rounded-top-0 border-primary border-0 me-2"
-              src="../images/Profile-image-hikes-inspire.jpg"
-              alt="Profile image linking to profile page"
+      <nav class="navbar navbar-expand-lg">
+        <div class="container-fluid">
+          <a
+            class="navbar-brand text-light d-flex justify-content-center align-items-center"
+            href="../index.html"
+          >
+            <img
+              src="../images/mdi_foot-print.png"
+              class="d-inline-block align-center"
+              alt="Footprint logo linking to home page"
             />
-          </a>
+            <h1 class="primary-font uppercase">Hikes Inspire</h1></a
+          >
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarNavDropdown"
+            aria-controls="navbarNavDropdown"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div
+            class="collapse navbar-collapse justify-content-end"
+            id="navbarNavDropdown"
+          >
+            <ul class="navbar-nav">
+              <li class="nav-item d-flex justify-content-end">
+                <a
+                  class="nav-link text-light"
+                  aria-current="page"
+                  href="../index.html"
+                  >Log Out</a
+                >
+              </li>
+              <li class="nav-item d-flex justify-content-end">
+                <a class="nav-link active text-light" href="./feed.html"
+                  >Feed</a
+                >
+              </li>
+              <li class="nav-item d-flex justify-content-end">
+                <a class="nav-link text-light" href="./profile.html"
+                  >My Profile</a
+                >
+              </li>
+            </ul>
+          </div>
         </div>
-      </div>
+      </nav>
     </header>
+
     <main>
       <div class="container my-5">
         <nav>
@@ -89,14 +124,16 @@
           >
             <div class="input-group">
               <input
+                id="search"
                 class="form-control me-2 placeholder bg-light"
                 type="search"
-                placeholder="E.g. locations, conditions, seasons"
+                placeholder="E.g. locations, seasons ..."
                 aria-label="Search"
               />
-              <button type="submit" class="btn btn-outline-secondary">
-                <i class="bi bi-search"></i>
-              </button>
+              <a href="#search" class="mx-2"
+                ><button type="submit" class="btn btn-outline-secondary">
+                  <i class="bi bi-search"></i></button
+              ></a>
               <button
                 type="button"
                 class="btn btn-outline-secondary dropdown-toggle"
@@ -136,8 +173,8 @@
                   >
                 </div>
                 <div class="col-sm-7 col-md-8 my-2">
-                  <h2 class="h4">Hiking adventure</h2>
-                  <p class="">
+                  <h2 class="h4 primary-font-uppercase">Hiking adventure</h2>
+                  <p class="primary-font">
                     Lorem ipsum dolor sit, amet consectetur adipisicing elit.
                     Optio voluptates quam ipsam aut ratione, adipisci, tenetur
                     eveniet repellendus quae, qui asperiores ab atque itaque.
@@ -182,7 +219,7 @@
                   >
                 </div>
                 <div class="col-sm-7 col-md-8 my-2">
-                  <h2 class="h4">Hiking adventure</h2>
+                  <h2 class="h4 primary-font-uppercase">Hiking adventure</h2>
                   <p class="">
                     Lorem ipsum dolor sit, amet consectetur adipisicing elit.
                     Optio voluptates quam ipsam aut ratione, adipisci, tenetur
@@ -228,7 +265,7 @@
                   >
                 </div>
                 <div class="col-sm-7 col-md-8 my-2">
-                  <h2 class="h4">Hiking adventure</h2>
+                  <h2 class="h4 primary-font-uppercase">Hiking adventure</h2>
                   <p class="">
                     Lorem ipsum dolor sit, amet consectetur adipisicing elit.
                     Optio voluptates quam ipsam aut ratione, adipisci, tenetur
@@ -280,7 +317,7 @@
                   >
                 </div>
                 <div class="col-sm-7 col-md-8 my-2">
-                  <h2 class="h4">Hiking adventure</h2>
+                  <h2 class="h4 primary-font-uppercase">Hiking adventure</h2>
                   <p class="">
                     Lorem ipsum dolor sit, amet consectetur adipisicing elit.
                     Optio voluptates quam ipsam aut ratione, adipisci, tenetur
@@ -328,7 +365,7 @@
                   >
                 </div>
                 <div class="col-sm-7 col-md-8 my-2">
-                  <h2 class="h4">Hiking adventure</h2>
+                  <h2 class="h4 primary-font-uppercase">Hiking adventure</h2>
                   <p class="">
                     Lorem ipsum dolor sit, amet consectetur adipisicing elit.
                     Optio voluptates quam ipsam aut ratione, adipisci, tenetur
@@ -354,6 +391,14 @@
                 </div>
               </div>
             </div>
+            <div class="d-flex justify-content-center mb-5">
+              <a
+                href="#header-feed-page"
+                class="btn btn-primary border-secondary"
+                id="btn-to-top"
+                >To top <i class="fa-solid fa-angle-up"></i
+              ></a>
+            </div>
           </div>
           <div
             class="tab-pane fade p-3"
@@ -375,14 +420,6 @@
             </div>
           </div>
         </div>
-      </div>
-      <div class="d-flex justify-content-center mb-5">
-        <a
-          href="#header-feed-page"
-          class="btn btn-primary border-secondary"
-          id="btn-to-top"
-          >To top <i class="fa-solid fa-angle-up"></i
-        ></a>
       </div>
     </main>
     <footer class="bg-secondary pt-5 pb-5"></footer>
