--- a/index.html
+++ b/index.html
@@ -3,8 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Log in and registration page</title>
-
+    <title>Log in | Hikes Inspire</title>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Dosis:wght@200..800&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
+      rel="stylesheet"
+    />
     <link
       href="https://fonts.googleapis.com/css2?family=Bad+Script&family=Julius+Sans+One&display=swap"
       rel="stylesheet"
@@ -17,20 +23,53 @@
   </head>
   <body>
     <header class="bg-secondary container-fluid">
-      <div class="row d-flex justify-content-between me-4">
-        <div class="col-8 m-2 p-0">
-          <nav class="navbar navbar-light">
-            <a class="navbar-brand text-light" href="index.html">
-              <img
-                src="./images/mdi_foot-print.png"
-                class="d-inline-block align-center"
-                alt="Footprint logo linking to home page"
-              />
-              <h1 class="d-inline-block h2 primary-font">Hikes Inspire</h1>
-            </a>
-          </nav>
+      <nav class="navbar navbar-expand-lg">
+        <div class="container-fluid">
+          <a
+            class="navbar-brand text-light d-flex justify-content-center align-items-center"
+            href="index.html"
+          >
+            <img
+              src="./images/mdi_foot-print.png"
+              class="d-inline-block align-center"
+              alt="Footprint logo linking to home page"
+            />
+            <h1 class="primary-font uppercase">Hikes Inspire</h1></a
+          >
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarNavDropdown"
+            aria-controls="navbarNavDropdown"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div
+            class="collapse navbar-collapse justify-content-end"
+            id="navbarNavDropdown"
+          >
+            <ul class="navbar-nav">
+              <li class="nav-item d-flex justify-content-end">
+                <a
+                  class="nav-link active"
+                  aria-current="page"
+                  href="#inputEmail"
+                  >Log In</a
+                >
+              </li>
+              <li class="nav-item d-flex justify-content-end">
+                <a class="nav-link disabled" href="#">Feed</a>
+              </li>
+              <li class="nav-item d-flex justify-content-end">
+                <a class="nav-link disabled" href="#">My Profile</a>
+              </li>
+            </ul>
+          </div>
         </div>
-      </div>
+      </nav>
     </header>
     <main class="pb-5 pt-5 d-flex justify-content-center align-items-center">
       <div
@@ -101,6 +140,6 @@
         </div>
       </div>
     </main>
-    <footer class="bg-secondary pt-5 pb-5"></footer>
+    <footer class="bg-secondary pt-5 pb-5">Hello</footer>
   </body>
 </html>
