Changed theme colors
Color adjustmenst on elements.

--- a/html/feed.html
+++ b/html/feed.html
@@ -173,8 +173,8 @@
                   >
                 </div>
                 <div class="col-sm-7 col-md-8 my-2">
-                  <h2 class="h4 primary-font-uppercase">Hiking adventure</h2>
-                  <p class="primary-font">
+                  <h2 class="h4 primary-font">Hiking adventure</h2>
+                  <p>
                     Lorem ipsum dolor sit, amet consectetur adipisicing elit.
                     Optio voluptates quam ipsam aut ratione, adipisci, tenetur
                     eveniet repellendus quae, qui asperiores ab atque itaque.
@@ -219,7 +219,7 @@
                   >
                 </div>
                 <div class="col-sm-7 col-md-8 my-2">
-                  <h2 class="h4 primary-font-uppercase">Hiking adventure</h2>
+                  <h2 class="h4 primary-font">Hiking adventure</h2>
                   <p class="">
                     Lorem ipsum dolor sit, amet consectetur adipisicing elit.
                     Optio voluptates quam ipsam aut ratione, adipisci, tenetur
@@ -265,7 +265,7 @@
                   >
                 </div>
                 <div class="col-sm-7 col-md-8 my-2">
-                  <h2 class="h4 primary-font-uppercase">Hiking adventure</h2>
+                  <h2 class="h4 primary-font">Hiking adventure</h2>
                   <p class="">
                     Lorem ipsum dolor sit, amet consectetur adipisicing elit.
                     Optio voluptates quam ipsam aut ratione, adipisci, tenetur
@@ -317,7 +317,7 @@
                   >
                 </div>
                 <div class="col-sm-7 col-md-8 my-2">
-                  <h2 class="h4 primary-font-uppercase">Hiking adventure</h2>
+                  <h2 class="h4 primary-font">Hiking adventure</h2>
                   <p class="">
                     Lorem ipsum dolor sit, amet consectetur adipisicing elit.
                     Optio voluptates quam ipsam aut ratione, adipisci, tenetur
@@ -365,7 +365,7 @@
                   >
                 </div>
                 <div class="col-sm-7 col-md-8 my-2">
-                  <h2 class="h4 primary-font-uppercase">Hiking adventure</h2>
+                  <h2 class="h4 primary-font">Hiking adventure</h2>
                   <p class="">
                     Lorem ipsum dolor sit, amet consectetur adipisicing elit.
                     Optio voluptates quam ipsam aut ratione, adipisci, tenetur
