--- a/html/profile.html
+++ b/html/profile.html
@@ -24,7 +24,7 @@
     <link rel="stylesheet" href="../css/theme.css" />
   </head>
   <body>
-    <header class="bg-secondary container-fluid" id="header-feed-page">
+    <header class="bg-secondary container-fluid" id="header-profile-page">
       <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
           <a
@@ -96,7 +96,7 @@
           </div>
         </div>
         <div
-          class="d-flex justify-content-around justify-content-md-end row bg-secondary py-3 pe-md-5"
+          class="d-flex justify-content-around justify-content-md-end row bg-primary py-3 pe-md-5"
         >
           <a href="#" class="col-6 col-md-2 col-lg-1"
             ><p class="text-light text-center">529 Followers</p></a
@@ -108,15 +108,12 @@
       </section>
 
       <section class="container my-5">
-        <h1 class="col primary-font text-light text-center h2 my-5">
-          My Posts
-        </h1>
         <div
           class="row d-flex justify-content-center .justify-content-sm-around"
         >
           <a href="#" class="col-10 col-sm-5 col-md-4 col-lg-3 my-2"
             ><div class="card text-bg-info mb-3">
-              <h2 class="primary-font-uppercase h6 text-center mt-3 mx-1">
+              <h2 class="primary-font h6 text-center mt-3 mx-1">
                 Lofoten Hiking experience
               </h2>
               <div class="card-body">
@@ -129,9 +126,7 @@
           </a>
           <a href="#" class="col-10 col-sm-5 col-md-4 col-lg-3 my-2"
             ><div class="card text-bg-info mb-3">
-              <h2 class="primary-font-uppercase h6 text-center mt-3 mx-1">
-                Trollheimen
-              </h2>
+              <h2 class="primary-font h6 text-center mt-3 mx-1">Trollheimen</h2>
               <div class="card-body">
                 <img
                   src="../images/benjamin-davies-CiYenwxBB3U-unsplash.jpg"
@@ -142,7 +137,7 @@
           </a>
           <a href="#" class="col-10 col-sm-5 col-md-4 col-lg-3 my-2"
             ><div class="card text-bg-info mb-3">
-              <h2 class="primary-font-uppercase h6 text-center mt-3 mx-1">
+              <h2 class="primary-font h6 text-center mt-3 mx-1">
                 The Majestetic North
               </h2>
               <div class="card-body">
@@ -155,9 +150,7 @@
           </a>
           <a href="#" class="col-10 col-sm-5 col-md-4 col-lg-3 my-2"
             ><div class="card text-bg-info mb-3">
-              <h2 class="primary-font-uppercase h6 text-center mt-3 mx-1">
-                Lofoten Hiking experience
-              </h2>
+              <h2 class="primary-font h6 text-center mt-3 mx-1">Steinsdalen</h2>
               <div class="card-body">
                 <img
                   src="../images/tobias-tullius-eJeEz6Paz-o-unsplash.jpg"
@@ -169,7 +162,7 @@
 
           <a href="#" class="col-10 col-sm-5 col-md-4 col-lg-3 my-2"
             ><div class="card text-bg-info mb-3">
-              <h2 class="primary-font-uppercase h6 text-center mt-3 mx-1">
+              <h2 class="primary-font h6 text-center mt-3 mx-1">
                 Lofoten Hiking experience
               </h2>
               <div class="card-body">
@@ -182,9 +175,7 @@
           </a>
           <a href="#" class="col-10 col-sm-5 col-md-4 col-lg-3 my-2"
             ><div class="card text-bg-info mb-3">
-              <h2 class="primary-font-uppercase h6 text-center mt-3 mx-1">
-                Trollheimen
-              </h2>
+              <h2 class="primary-font h6 text-center mt-3 mx-1">Trollheimen</h2>
               <div class="card-body">
                 <img
                   src="../images/benjamin-davies-CiYenwxBB3U-unsplash.jpg"
@@ -195,7 +186,7 @@
           </a>
           <a href="#" class="col-10 col-sm-5 col-md-4 col-lg-3 my-2"
             ><div class="card text-bg-info mb-3">
-              <h2 class="primary-font-uppercase h6 text-center mt-3 mx-1">
+              <h2 class="primary-font h6 text-center mt-3 mx-1">
                 The Majestetic North
               </h2>
               <div class="card-body">
@@ -208,9 +199,7 @@
           </a>
           <a href="#" class="col-10 col-sm-5 col-md-4 col-lg-3 my-2"
             ><div class="card text-bg-info mb-3">
-              <h2 class="primary-font-uppercase h6 text-center mt-3 mx-1">
-                Lofoten Hiking experience
-              </h2>
+              <h2 class="primary-font h6 text-center mt-3 mx-1">Steinsdalen</h2>
               <div class="card-body">
                 <img
                   src="../images/tobias-tullius-eJeEz6Paz-o-unsplash.jpg"
