--- a/index.html
+++ b/index.html
@@ -54,17 +54,19 @@
             <ul class="navbar-nav">
               <li class="nav-item d-flex justify-content-end">
                 <a
-                  class="nav-link active"
+                  class="nav-link active text-light"
                   aria-current="page"
                   href="#inputEmail"
                   >Log In</a
                 >
               </li>
               <li class="nav-item d-flex justify-content-end">
-                <a class="nav-link disabled" href="#">Feed</a>
+                <a class="nav-link disabled text-primary" href="#">Feed</a>
               </li>
               <li class="nav-item d-flex justify-content-end">
-                <a class="nav-link disabled" href="#">My Profile</a>
+                <a class="nav-link disabled text-primary" href="#"
+                  >My Profile</a
+                >
               </li>
             </ul>
           </div>
