--- a/html/feed.html
+++ b/html/feed.html
@@ -9,16 +9,9 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
     />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+
     <link
-      href="https://fonts.googleapis.com/css2?family=Dosis:wght@200..800&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Bad+Script&family=Julius+Sans+One&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Julius+Sans+One&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
       rel="stylesheet"
     />
     <script
@@ -125,7 +118,7 @@
             <div class="input-group">
               <input
                 id="search"
-                class="form-control me-2 placeholder bg-light"
+                class="form-control me-2 placeholder bg-light secondary-font"
                 type="search"
                 placeholder="E.g. locations, seasons ..."
                 aria-label="Search"
@@ -144,12 +137,22 @@
                 <i class="bi bi-filter"></i>
               </button>
               <ul class="dropdown-menu dropdown-menu-end">
-                <li><a class="dropdown-item text-light" href="#">Newest</a></li>
-                <li><hr class="dropdown-divider" /></li>
-                <li><a class="dropdown-item text-light" href="#">Oldest</a></li>
+                <li>
+                  <a class="dropdown-item text-light secondary-font" href="#"
+                    >Newest</a
+                  >
+                </li>
                 <li><hr class="dropdown-divider" /></li>
                 <li>
-                  <a class="dropdown-item text-light" href="#">Most popular</a>
+                  <a class="dropdown-item text-light secondary-font" href="#"
+                    >Oldest</a
+                  >
+                </li>
+                <li><hr class="dropdown-divider" /></li>
+                <li>
+                  <a class="dropdown-item text-light secondary-font" href="#"
+                    >Most popular</a
+                  >
                 </li>
               </ul>
             </div>
@@ -162,7 +165,7 @@
                     class="img-thumbnail"
                   />
                   <small
-                    class="row my-3 d-flex justify-content-start .justify-content-md-end"
+                    class="row my-3 d-flex justify-content-start .justify-content-md-end secondary-font"
                     ><a
                       href="#"
                       class="col-2 col-sm-12 col-md-3 text-light me-1"
@@ -174,7 +177,7 @@
                 </div>
                 <div class="col-sm-7 col-md-8 my-2">
                   <h2 class="h4 primary-font">Hiking adventure</h2>
-                  <p>
+                  <p class="secondary-font">
                     Lorem ipsum dolor sit, amet consectetur adipisicing elit.
                     Optio voluptates quam ipsam aut ratione, adipisci, tenetur
                     eveniet repellendus quae, qui asperiores ab atque itaque.
@@ -185,7 +188,7 @@
                 <div
                   class="d-flex justify-content-start justify-content-md-center ms-3 ms-md-0"
                 >
-                  <small class="row mb-4 p-sm-0"
+                  <small class="row mb-4 p-sm-0 secondary-font"
                     >Written by:
                     <div class="col-6">
                       <a href="#" class="col text-light">Link to user</a>
@@ -208,7 +211,7 @@
                     class="img-thumbnail"
                   />
                   <small
-                    class="row my-3 d-flex justify-content-start .justify-content-md-end"
+                    class="row my-3 d-flex justify-content-start .justify-content-md-end secondary-font"
                     ><a
                       href="#"
                       class="col-2 col-sm-12 col-md-3 text-light me-2"
@@ -220,7 +223,7 @@
                 </div>
                 <div class="col-sm-7 col-md-8 my-2">
                   <h2 class="h4 primary-font">Hiking adventure</h2>
-                  <p class="">
+                  <p class="secondary-font">
                     Lorem ipsum dolor sit, amet consectetur adipisicing elit.
                     Optio voluptates quam ipsam aut ratione, adipisci, tenetur
                     eveniet repellendus quae, qui asperiores ab atque itaque.
@@ -231,7 +234,7 @@
                 <div
                   class="d-flex justify-content-start justify-content-md-center ms-3 ms-md-0"
                 >
-                  <small class="row mb-4 p-sm-0"
+                  <small class="row mb-4 p-sm-0 secondary-font"
                     >Written by:
                     <div class="col-6">
                       <a href="#" class="col text-light">Link to user</a>
@@ -254,7 +257,7 @@
                     class="img-thumbnail"
                   />
                   <small
-                    class="row my-3 d-flex justify-content-start .justify-content-md-end"
+                    class="row my-3 d-flex justify-content-start .justify-content-md-end secondary-font"
                     ><a
                       href="#"
                       class="col-4 col-sm-12 col-md-5 text-light me-3"
@@ -266,7 +269,7 @@
                 </div>
                 <div class="col-sm-7 col-md-8 my-2">
                   <h2 class="h4 primary-font">Hiking adventure</h2>
-                  <p class="">
+                  <p class="secondary-font">
                     Lorem ipsum dolor sit, amet consectetur adipisicing elit.
                     Optio voluptates quam ipsam aut ratione, adipisci, tenetur
                     eveniet repellendus quae, qui asperiores ab atque itaque.
@@ -277,7 +280,7 @@
                 <div
                   class="d-flex justify-content-start justify-content-md-center ms-3 ms-md-0"
                 >
-                  <small class="row mb-4 p-sm-0"
+                  <small class="row mb-4 p-sm-0 secondary-font"
                     >Written by:
                     <div class="col-6">
                       <a href="#" class="col text-light">Link to user</a>
@@ -300,7 +303,7 @@
                     class="img-thumbnail"
                   />
                   <small
-                    class="row my-3 d-flex justify-content-center .justify-content-sm-start .justify-content-md-end"
+                    class="row my-3 d-flex justify-content-center .justify-content-sm-start .justify-content-md-end secondary-font"
                     ><a
                       href="#"
                       class="col-3 col-sm-12 col-md-4 text-light me-2"
@@ -318,7 +321,7 @@
                 </div>
                 <div class="col-sm-7 col-md-8 my-2">
                   <h2 class="h4 primary-font">Hiking adventure</h2>
-                  <p class="">
+                  <p class="secondary-font">
                     Lorem ipsum dolor sit, amet consectetur adipisicing elit.
                     Optio voluptates quam ipsam aut ratione, adipisci, tenetur
                     eveniet repellendus quae, qui asperiores ab atque itaque.
@@ -329,7 +332,7 @@
                 <div
                   class="d-flex justify-content-start justify-content-md-center ms-3 ms-md-0"
                 >
-                  <small class="row mb-4 p-sm-0"
+                  <small class="row mb-4 p-sm-0 secondary-font"
                     >Written by:
                     <div class="col-6">
                       <a href="#" class="col text-light">Link to user</a>
@@ -352,7 +355,7 @@
                     class="img-thumbnail"
                   />
                   <small
-                    class="row my-3 d-flex justify-content-start .justify-content-md-end"
+                    class="row my-3 d-flex justify-content-start .justify-content-md-end secondary-font"
                     ><a
                       href="#"
                       class="col-2 text-light col-sm-12 col-md-3 me-1"
@@ -366,7 +369,7 @@
                 </div>
                 <div class="col-sm-7 col-md-8 my-2">
                   <h2 class="h4 primary-font">Hiking adventure</h2>
-                  <p class="">
+                  <p class="secondary-font">
                     Lorem ipsum dolor sit, amet consectetur adipisicing elit.
                     Optio voluptates quam ipsam aut ratione, adipisci, tenetur
                     eveniet repellendus quae, qui asperiores ab atque itaque.
@@ -377,7 +380,7 @@
                 <div
                   class="d-flex justify-content-start justify-content-md-center ms-3 ms-md-0"
                 >
-                  <small class="row mb-4 p-sm-0"
+                  <small class="row mb-4 p-sm-0 secondary-font"
                     >Written by:
                     <div class="col-6">
                       <a href="#" class="col text-light">Link to user</a>
@@ -394,7 +397,7 @@
             <div class="d-flex justify-content-center mb-5">
               <a
                 href="#header-feed-page"
-                class="btn btn-primary border-secondary"
+                class="btn btn-primary border-secondary secondary-font"
                 id="btn-to-top"
                 >To top <i class="fa-solid fa-angle-up"></i
               ></a>
@@ -406,8 +409,8 @@
             role="tabpanel"
             aria-labelledby="nav-post-tab"
           >
-            <h1>Post my hike</h1>
-            <p>
+            <h1 class="primary-font mt-5">Post my hike</h1>
+            <p class="secondary-font my-4">
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora
               laudantium fuga minima quia quibusdam. Quod id animi laboriosam
               aspernatur aut?
@@ -422,6 +425,6 @@
         </div>
       </div>
     </main>
-    <footer class="bg-secondary pt-5 pb-5"></footer>
+    <footer class="bg-secondary pt-5 pb-5 secondary-font"></footer>
   </body>
 </html>
