--- a/html/profile.html
+++ b/html/profile.html
@@ -5,16 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Profile | Hikes Inspire</title>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+
     <link
-      href="https://fonts.googleapis.com/css2?family=Dosis:wght@200..800&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Bad+Script&family=Julius+Sans+One&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Julius+Sans+One&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
       rel="stylesheet"
     />
     <script
@@ -90,7 +83,7 @@
               class="img-thumbnail p-1 rounded-circle rounded-5 rounded-top-0 border-primary border-0"
               src="../images/Profile-image-hikes-inspire.jpg"
             />
-            <a class="btn btn-warning rounded-pill my-3"
+            <a class="btn btn-warning rounded-pill my-3 secondary-font"
               >Follow <i class="fa-solid fa-plus"></i
             ></a>
           </div>
@@ -99,10 +92,14 @@
           class="d-flex justify-content-around justify-content-md-end row bg-primary py-3 pe-md-5"
         >
           <a href="#" class="col-6 col-md-2 col-lg-1"
-            ><p class="text-light text-center">529 Followers</p></a
+            ><p class="text-light text-center secondary-font">
+              529 Followers
+            </p></a
           >
           <a href="#" class="col-6 col-md-2 col-lg-1"
-            ><p class="text-light text-center">634 Following</p></a
+            ><p class="text-light text-center secondary-font">
+              634 Following
+            </p></a
           >
         </div>
       </section>
@@ -213,7 +210,7 @@
       <div class="d-flex justify-content-center mb-5">
         <a
           href="#header-profile-page"
-          class="btn btn-primary border-secondary"
+          class="btn btn-primary border-secondary secondary-font"
           id="btn-to-top"
           >To top <i class="fa-solid fa-angle-up"></i
         ></a>
