--- a/html/profile.html
+++ b/html/profile.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Profile | Hikes Inspire</title>
+    <meta
+      name="description"
+      content="Your personal profile page on Hikes Inspire."
+    />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
     <link
