Post area on feedpage

--- a/html/profile.html
+++ b/html/profile.html
@@ -75,7 +75,7 @@
       </nav>
     </header>
     <main>
-      <section class="text-center pb-3">
+      <section class="container text-center pb-3">
         <div class="justify-content-around align-items-center row py-4">
           <div class="col-8">
             <h2 class="primary-font text-light h4">I'm</h2>
