--- a/html/feed.html
+++ b/html/feed.html
@@ -413,17 +413,47 @@
             role="tabpanel"
             aria-labelledby="nav-post-tab"
           >
-            <h1 class="primary-font mt-5">Post my hike</h1>
-            <p class="secondary-font my-4">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora
-              laudantium fuga minima quia quibusdam. Quod id animi laboriosam
-              aspernatur aut?
-            </p>
-            <div class="input-group mb-3">
-              <input type="file" class="form-control" id="inputGroupFile02" />
-              <label class="input-group-text" for="inputGroupFile02"
-                >Upload</label
-              >
+            <div
+              class="d-flex row align-items-md-center justify-content-md-center"
+            >
+              <section class="d-flex flex-column col-md-8">
+                <h1 class="primary-font mt-5 text-light text-center h2">
+                  Post my hike
+                </h1>
+                <p class="secondary-font my-4 text-light">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Tempora laudantium fuga minima quia quibusdam. Quod id animi
+                  laboriosam aspernatur aut.
+                </p>
+              </section>
+
+              <section class="d-flex flex-column col-md-8">
+                <label for="post"></label>
+                <textarea
+                  id="post"
+                  name="post"
+                  class="pt-2 pb-5 px-2 mb-5 bg-primary border-secondary rounded text-light secondary-font"
+                ></textarea>
+                <div class="input-group mb-3">
+                  <input
+                    type="file"
+                    class="form-control bg-primary border-secondary text-light secondary-font"
+                    id="inputGroupFile02"
+                  />
+                  <label
+                    class="input-group-text bg-secondary border-secondary text-light secondary-font"
+                    for="inputGroupFile02"
+                    >Upload Image</label
+                  >
+                </div>
+                <div class="d-flex justify-content-center">
+                  <button
+                    class="btn btn-warning text-light col-5 col-xl-3 my-5"
+                  >
+                    Post hike
+                  </button>
+                </div>
+              </section>
             </div>
           </div>
         </div>
