Footer and font adjustments

--- a/html/feed.html
+++ b/html/feed.html
@@ -15,7 +15,7 @@
     />
 
     <link
-      href="https://fonts.googleapis.com/css2?family=Julius+Sans+One&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Bad+Script&family=Julius+Sans+One&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
       rel="stylesheet"
     />
     <script
@@ -459,6 +459,24 @@
         </div>
       </div>
     </main>
-    <footer class="bg-secondary pt-5 pb-5 secondary-font"></footer>
+    <footer class="bg-secondary pt-5 pb-3">
+      <div class="social d-flex col justify-content-center mb-5">
+        <a href="https://www.instagram.com/"
+          ><i class="fa-brands fa-instagram fa-lg mx-2"></i></a
+        ><a href="https://www.snapchat.com/"
+          ><i class="fa-brands fa-snapchat fa-lg mx-2"></i></a
+        ><a href="https://twitter.com/"
+          ><i class="fa-brands fa-x-twitter mx-2"></i></a
+        ><a href="https://www.facebook.com/"
+          ><i class="fa-brands fa-facebook mx-2"></i
+        ></a>
+      </div>
+      <ul class="list-inline d-flex col justify-content-center mb-3">
+        <li class="list-inline-item mx-2"><a href="#">About</a></li>
+        <li class="list-inline-item mx-2"><a href="#">Terms</a></li>
+        <li class="list-inline-item mx-2"><a href="#">Privacy Policy</a></li>
+      </ul>
+      <p class="copyright text-center">Hikes Inspire © 2024</p>
+    </footer>
   </body>
 </html>
