--- a/profile/index.html
+++ b/profile/index.html
@@ -160,11 +160,11 @@
           <a href="#" class="col-10 col-sm-5 col-md-4 col-lg-3 my-2"
             ><div class="card text-bg-info mb-3">
               <h2 class="primary-font h6 text-center mt-3 mx-1">
-                Lofoten Hiking experience
+                Green Mountain hike
               </h2>
               <div class="card-body">
                 <img
-                  src="../images/john-o-nolan-6f_ANCcbj3o-unsplash.jpg"
+                  src="../images/northern-norway-7605060_1280.jpg"
                   class="img-thumbnail"
                 />
               </div>
@@ -172,10 +172,10 @@
           </a>
           <a href="#" class="col-10 col-sm-5 col-md-4 col-lg-3 my-2"
             ><div class="card text-bg-info mb-3">
-              <h2 class="primary-font h6 text-center mt-3 mx-1">Trollheimen</h2>
+              <h2 class="primary-font h6 text-center mt-3 mx-1">Hardanger</h2>
               <div class="card-body">
                 <img
-                  src="../images/benjamin-davies-CiYenwxBB3U-unsplash.jpg"
+                  src="../images/vidar-nordli-mathisen-2cNh00feVzw-unsplash.jpg"
                   class="img-thumbnail"
                 />
               </div>
@@ -183,12 +183,10 @@
           </a>
           <a href="#" class="col-10 col-sm-5 col-md-4 col-lg-3 my-2"
             ><div class="card text-bg-info mb-3">
-              <h2 class="primary-font h6 text-center mt-3 mx-1">
-                The Majestetic North
-              </h2>
+              <h2 class="primary-font h6 text-center mt-3 mx-1">Trolltunga</h2>
               <div class="card-body">
                 <img
-                  src="../images/sami-matias-B8mHassV6Q0-unsplash.jpg"
+                  src="../images/gautam-arora-Ta0pzGO6N8U-unsplash.jpg"
                   class="img-thumbnail"
                 />
               </div>
@@ -196,10 +194,10 @@
           </a>
           <a href="#" class="col-10 col-sm-5 col-md-4 col-lg-3 my-2"
             ><div class="card text-bg-info mb-3">
-              <h2 class="primary-font h6 text-center mt-3 mx-1">Steinsdalen</h2>
+              <h2 class="primary-font h6 text-center mt-3 mx-1">Coast hike</h2>
               <div class="card-body">
                 <img
-                  src="../images/tobias-tullius-eJeEz6Paz-o-unsplash.jpg"
+                  src="../images/hery-707600_1280.jpg"
                   class="img-thumbnail"
                 />
               </div>
